[package]
name = "cyrup-jiraapi"
version = "1.0.0"
authors = ["robert@leaptheory.com"]
description = "Jira Cloud platform REST API documentation"
license = "Apache 2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.12.0", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
